Fixed arrows and spacing for image carousel

--- a/public/styles.css
+++ b/public/styles.css
@@ -112,6 +112,8 @@ body {
 .arrow {
   display: block;
   margin: 0 auto;
+  font-size: 12px;
+  color: gray;
 }
 /*
 .buttonContainer {
@@ -121,8 +123,16 @@ body {
 
 #topArrow {
   display: none;
+  margin-bottom: 20px;
 }
 
 #bottomArrow {
   display: block;
 }
+
+/* .circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 40px;
+  background-color: gray;
+} */
